@@ -9,13 +9,11 @@ package com.mars_sim.ui.swing.tool.monitor;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
-import java.util.Comparator;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import java.util.stream.Collectors;
 
-import com.mars_sim.core.CollectionUtils;
 import com.mars_sim.core.EntityEvent;
 import com.mars_sim.core.EntityEventType;
 import com.mars_sim.core.EntityListener;
@@ -43,7 +41,8 @@ import com.mars_sim.ui.swing.utils.RatingScoreRenderer;
  * into Columns.
  */
 @SuppressWarnings("serial")
-public class PersonTableModel extends UnitTableModel<Person> {
+public class PersonTableModel extends EntityMonitorModel<Person>
+		implements FilteredTableModel {
 
 	// Column indexes
 	private static final int NAME = 0;
@@ -72,6 +71,8 @@ public class PersonTableModel extends UnitTableModel<Person> {
 
 	private static final String DEHYDRATED = "Dehydrated";
 	private static final String STARVING = "Starving";
+	private static final String LIVE = "Show Alive";
+	private static final String DECEASED = "Show Deceased";
 	
 	/**
 	 * The static initializer creates the name & type arrays.
@@ -129,7 +130,6 @@ public class PersonTableModel extends UnitTableModel<Person> {
 
 	private boolean isLiveCB = true;
 	private boolean isDeceasedCB = false;
-	private boolean isBuriedCB = false;
 	
 	private transient Crewable vehicle;
 	private Set<Settlement> settlements = Collections.emptySet();
@@ -145,7 +145,7 @@ public class PersonTableModel extends UnitTableModel<Person> {
 	 *
 	 */
 	public PersonTableModel()  {
-		super (UnitType.PERSON, Msg.getString("PersonTableModel.nameAllCitizens"),
+		super (Msg.getString("PersonTableModel.nameAllCitizens"),
 				"PersonTableModel.countingCitizens", COLUMNS);
 		setupCache();
 		
@@ -162,19 +162,17 @@ public class PersonTableModel extends UnitTableModel<Person> {
 	 */
 	public PersonTableModel(Crewable vehicle) {
 		
-		super(UnitType.PERSON, Msg.getString("PersonTableModel.nameVehicle", //$NON-NLS-1$
+		super(Msg.getString("PersonTableModel.nameVehicle", //-NLS-1$
 				((Unit)vehicle).getName()), 
-				"PersonTableModel.countingPeople", //$NON-NLS-1$
+				"PersonTableModel.countingPeople", //-NLS-1$
 				COLUMNS);
 
 		setupCache();
 
 		sourceType = ValidSourceType.VEHICLE_CREW;
 		this.vehicle = vehicle;
-		
-		Collection<Person> crew = CollectionUtils.sortByName(vehicle.getCrew());
-		
-		resetEntities(crew);
+				
+		resetItems(vehicle.getCrew());
 		
 		crewListener = new PersonChangeListener(EntityEventType.INVENTORY_STORING_UNIT_EVENT,
 										EntityEventType.INVENTORY_RETRIEVING_UNIT_EVENT);
@@ -188,8 +186,8 @@ public class PersonTableModel extends UnitTableModel<Person> {
 	 * @param mission Monitored mission Person objects.
 	 */
 	public PersonTableModel(Mission mission)  {
-		super(UnitType.PERSON, Msg.getString("PersonTableModel.nameMission", //$NON-NLS-1$
-				mission.getName()), "PersonTableModel.countingMissionMembers", //$NON-NLS-1$
+		super(Msg.getString("PersonTableModel.nameMission", //-NLS-1$
+				mission.getName()), "PersonTableModel.countingMissionMembers", //-NLS-1$
 				COLUMNS);
 		
 		setupCache();
@@ -203,8 +201,7 @@ public class PersonTableModel extends UnitTableModel<Person> {
 			}
 		}
 		
-		CollectionUtils.sortByName(missionPeople);
-		resetEntities(missionPeople);
+		resetItems(missionPeople);
 		
 		missionListener = new LocalMissionListener();
 		mission.addEntityListener(missionListener);
@@ -226,75 +223,28 @@ public class PersonTableModel extends UnitTableModel<Person> {
 		
 		Collection<Person> entities = null;
 		
-		if (isLiveCB) {
-			if (sourceType == ValidSourceType.SETTLEMENT_ALL_ASSOCIATED_PEOPLE) {
+		if (sourceType == ValidSourceType.SETTLEMENT_ALL_ASSOCIATED_PEOPLE) {
 
-				entities = settlements.stream()
-								.map(Settlement::getAllAssociatedPeople)
-								.flatMap(Collection::stream)
-								.sorted(Comparator.comparing(Person::getName))
-								.collect(Collectors.toList());
-				settlementListener = new PersonChangeListener(EntityEventType.ADD_ASSOCIATED_PERSON_EVENT,
-										EntityEventType.REMOVE_ASSOCIATED_PERSON_EVENT);
-			}
-			else {
-
-				entities = settlements.stream()
-								.map(Settlement::getIndoorPeople)
-								.flatMap(Collection::stream)
-								.sorted(Comparator.comparing(Person::getName))
-								.collect(Collectors.toList());
-				settlementListener = new PersonChangeListener(EntityEventType.INVENTORY_STORING_UNIT_EVENT,
-												EntityEventType.INVENTORY_RETRIEVING_UNIT_EVENT);
-			}
+			entities = settlements.stream()
+							.map(Settlement::getAllAssociatedPeople)
+							.flatMap(Collection::stream)
+							.filter(this::isPersonDisplayable)
+							.toList();
+			settlementListener = new PersonChangeListener(EntityEventType.ADD_ASSOCIATED_PERSON_EVENT,
+									EntityEventType.REMOVE_ASSOCIATED_PERSON_EVENT);
 		}
-		else if (isDeceasedCB) {
-			if (sourceType == ValidSourceType.SETTLEMENT_ALL_ASSOCIATED_PEOPLE) {
-
-				entities = settlements.stream()
-								.map(Settlement::getDeceasedPeople)
-								.flatMap(Collection::stream)
-								.sorted(Comparator.comparing(Person::getName))
-								.collect(Collectors.toList());
-				settlementListener = new PersonChangeListener(EntityEventType.ADD_ASSOCIATED_PERSON_EVENT,
-										EntityEventType.REMOVE_ASSOCIATED_PERSON_EVENT);
-			}
-			else {
-
-				entities = settlements.stream()
-								.map(Settlement::getIndoorPeople)
-								.flatMap(Collection::stream)
-								.sorted(Comparator.comparing(Person::getName))
-								.collect(Collectors.toList());
-				settlementListener = new PersonChangeListener(EntityEventType.INVENTORY_STORING_UNIT_EVENT,
-												EntityEventType.INVENTORY_RETRIEVING_UNIT_EVENT);
-			}
-		}
-		else if (isBuriedCB) {
-			if (sourceType == ValidSourceType.SETTLEMENT_ALL_ASSOCIATED_PEOPLE) {
-	
-				entities = settlements.stream()
-								.map(Settlement::getBuriedPeople)
-								.flatMap(Collection::stream)
-								.sorted(Comparator.comparing(Person::getName))
-								.collect(Collectors.toList());
-				settlementListener = new PersonChangeListener(EntityEventType.ADD_ASSOCIATED_PERSON_EVENT,
-											EntityEventType.REMOVE_ASSOCIATED_PERSON_EVENT);
-			}
-			else {
-
-				entities = settlements.stream()
-								.map(Settlement::getIndoorPeople)
-								.flatMap(Collection::stream)
-								.sorted(Comparator.comparing(Person::getName))
-								.collect(Collectors.toList());
-				settlementListener = new PersonChangeListener(EntityEventType.INVENTORY_STORING_UNIT_EVENT,
-												EntityEventType.INVENTORY_RETRIEVING_UNIT_EVENT);
-			}		
+		else {
+			entities = settlements.stream()
+							.map(Settlement::getIndoorPeople)
+							.flatMap(Collection::stream)
+							.filter(this::isPersonDisplayable)
+							.toList();
+			settlementListener = new PersonChangeListener(EntityEventType.INVENTORY_STORING_UNIT_EVENT,
+											EntityEventType.INVENTORY_RETRIEVING_UNIT_EVENT);
 		}
 		
 		if (entities != null && !entities.isEmpty()) {		
-			resetEntities(entities);
+			resetItems(entities);
 		}
 
 		// Listen to the settlements for new People
@@ -304,42 +254,47 @@ public class PersonTableModel extends UnitTableModel<Person> {
 	}
 
 	/**
-	 * Shows live citizens if selected.
-	 * 
-	 * @param isLive
+	 * Is the Person displayable based on the alive/deceased filters.
+	 * @param p
+	 * @return
 	 */
-	public void showAlive(boolean isLive) {
-		this.isLiveCB = isLive;
-		if (isLive) {
-			this.isDeceasedCB = false;
-			this.isBuriedCB = false;
+	private boolean isPersonDisplayable(Person p) {
+		if (!isLiveCB && !isDeceasedCB) {
+			return false;
 		}
+		if (p.isDeclaredDead()) {
+			return isDeceasedCB;
+		}
+		return isLiveCB;
 	}
-	
+
 	/**
-	 * Shows deceased citizens if selected.
-	 * 
-	 * @param isDeceased
-	 */
-	public void showDeceased(boolean isDeceased) {
-		this.isDeceasedCB = isDeceased;
-		if (isDeceased) {
-			this.isLiveCB = false;
-			this.isBuriedCB = false;
-		}
+	 * Get a list of the supported filters and their active state based on the alive state of Persons
+	 * @return
+	 */	
+	@Override
+	public List<FilteredTableModel.Filter> getActiveFilters() {
+		var filters = new ArrayList<FilteredTableModel.Filter>();
+		filters.add(new Filter(LIVE, LIVE, isLiveCB));
+		filters.add(new Filter(DECEASED, DECEASED, isDeceasedCB));
+
+		return filters;
 	}
-	
+
 	/**
-	 * Shows buried citizens if selected.
-	 * 
-	 * @param isBuried
+	 * Enable/disable display of a filter.
+	 * @param name Name of the filter.
+	 * @param selected true to display, false to block
 	 */
-	public void showBuried(boolean isBuried) {
-		this.isBuriedCB = isBuried;
-		if (isBuried) {
-			this.isLiveCB = false;
-			this.isDeceasedCB = false;
+	@Override
+	public void setFilter(String name, boolean isDisplayed) {
+		switch (name) {
+			case LIVE -> isLiveCB = isDisplayed;
+			case DECEASED -> isDeceasedCB = isDisplayed;
 		}
+
+		// Reload
+		setSettlementFilter(settlements);
 	}
 
 	/**
@@ -349,7 +304,7 @@ public class PersonTableModel extends UnitTableModel<Person> {
 	 * @param columnIndex Column index of the cell.
 	 */
 	@Override
-	protected Object getEntityValue(Person person, int columnIndex) {
+	protected Object getItemValue(Person person, int columnIndex) {
 		Object result = null;
 
 		switch (columnIndex) {
@@ -478,7 +433,7 @@ public class PersonTableModel extends UnitTableModel<Person> {
     public String getToolTipAt(int rowIndex, int columnIndex) {
 		String result = null;
 		if (columnIndex == TASK_DESC) {
-			Person p = getEntity(rowIndex);
+			Person p = getItem(rowIndex);
 			if (p != null) {
 				// If the Person is dead, there is no Task Manager
 				var score = p.getMind().getTaskManager().getScore();
@@ -514,17 +469,21 @@ public class PersonTableModel extends UnitTableModel<Person> {
 	public void destroy() {
 		super.destroy();
 
-		 if (sourceType == ValidSourceType.VEHICLE_CREW) {
-			((Unit) vehicle).removeEntityListener(crewListener);
-			crewListener = null;
-			vehicle = null;
-		} else if (sourceType == ValidSourceType.MISSION_PEOPLE) {
-			mission.removeEntityListener(missionListener);
-			missionListener = null;
-			mission = null;
-		} else {
-			settlements.forEach(s -> s.removeEntityListener(settlementListener));
-			settlementListener = null;
+		 switch (sourceType) {
+			case ValidSourceType.VEHICLE_CREW -> {
+					((Unit) vehicle).removeEntityListener(crewListener);
+					crewListener = null;
+					vehicle = null;
+				}
+			case ValidSourceType.MISSION_PEOPLE -> {
+					mission.removeEntityListener(missionListener);
+					missionListener = null;
+					mission = null;
+				}
+			default -> {
+					settlements.forEach(s -> s.removeEntityListener(settlementListener));
+					settlementListener = null;
+				}
 		}
 	}
 
@@ -544,10 +503,10 @@ public class PersonTableModel extends UnitTableModel<Person> {
 				String eventType = event.getType();
 
 				if (eventType.equals(Mission.ADD_MEMBER_EVENT)) {
-					addEntity(p);
+					addItem(p);
 				}
 				else if (eventType.equals(Mission.REMOVE_MEMBER_EVENT)) {
-					removeEntity(p);
+					removeItem(p);
 				}
 			}
 		}
@@ -575,10 +534,10 @@ public class PersonTableModel extends UnitTableModel<Person> {
 			if (event.getTarget() instanceof Person p) {
 				String eventType = event.getType();
 				if (addEvent.equals(eventType)) {
-					addEntity(p);
+					addItem(p);
 				}
 				else if (removeEvent.equals(eventType)) {
-					removeEntity(p);
+					removeItem(p);
 				}
 			}
 		}
